--- a/index.html
+++ b/index.html
@@ -5,26 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cuberto</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
     <div class="row">
 
-    </div class="row">
-    <div>
-        <div></div>
-        <div></div>
+    </div>
+    <div class="row">
+        <div class="column-2 estilos">1</div>
+        <div class="column-2 estilos">2</div>
+    </div>
+    <div class="row">
+        <div class="column-2 estilos">1</div>
+        <div class="column-2 estilos">2</div>
+    </div>
+    <div class="row">
+        <div class="column-2 estilos">1</div>
+        <div class="column-2 estilos">2</div>
     </div>
     <div class="row">
 
     </div>
     <div class="row">
-
-    </div>
-    <div class="row">
-
-    </div>
-    <div class="row">
-        
+        <div class="column-4 estilos">3</div>
+        <div class="column-4 estilos">4</div>
+        <div class="column-4 estilos">5</div>
+        <div class="column-4 estilos">6</div>
     </div>
 </body>
 </html>
