--- a/index.html
+++ b/index.html
@@ -1,36 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuberto</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-</head>
-<body>
-    <div class="row">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cuberto</title>
+        <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    </head>
+    <body>
+        <div class="row">
+            <p>Mobile development</p>
+            <h2>Grow your business with mobile apps</h2>
+        </div>
+        <div class="row">
+            <div class="column-2 estilos">
+                <h5>Sleepiest</h5>
+                <h3>Helps millions fall asleep everi night</h3>
+                <p>branding, desing, mobile, product</p>
+            </div>
+            <div class="column-2 estilos"><img src="./img/section-1-m.png"></div>
+        </div>
+        <div class="row">
+            <div class="column-2 estilos"><img src="./img/section-2-m.png"></div>
+            <div class="column-2 estilos">
+                <h5>uLesson</h5>
+                <h3>Online platform for distance learning</h3>
+                <p>web, mobile, product</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="column-2 estilos">
+                <h5>Genesis Vision</h5>
+                <h3>Private trust management and trading platform</h3>
+                <p></p>
+            </div>
+            <div class="column-2 estilos"><img src="./img/section-3-m.png"></div>
+        </div>
+        <div class="row">
 
-    </div>
-    <div class="row">
-        <div class="column-2 estilos">1</div>
-        <div class="column-2 estilos">2</div>
-    </div>
-    <div class="row">
-        <div class="column-2 estilos">1</div>
-        <div class="column-2 estilos">2</div>
-    </div>
-    <div class="row">
-        <div class="column-2 estilos">1</div>
-        <div class="column-2 estilos">2</div>
-    </div>
-    <div class="row">
-
-    </div>
-    <div class="row">
-        <div class="column-4 estilos">3</div>
-        <div class="column-4 estilos">4</div>
-        <div class="column-4 estilos">5</div>
-        <div class="column-4 estilos">6</div>
-    </div>
-</body>
-</html>
+        </div>
+        <div class="row">
+            <div></div>
+            <div class="column-4 estilos">3</div>
+            <div class="column-4 estilos">4</div>
+            <div class="column-4 estilos">5</div>
+            <div class="column-4 estilos">6</div>
+        </div>
+    </body>
+    </html>
