--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
     </head>
     <body>
-        <div class="row">
+        <div class="titulo">
             <p>Mobile development</p>
-            <h2>Grow your business with mobile apps</h2>
+            <h1>Grow your business with mobile apps</h1>
         </div>
         <div class="row">
             <div class="column-2 estilos">
@@ -40,7 +40,7 @@
 
         </div>
         <div class="row">
-            <div></div>
+            <div class=""></div>
             <div class="column-4 estilos">3</div>
             <div class="column-4 estilos">4</div>
             <div class="column-4 estilos">5</div>
