--- a/index.html
+++ b/index.html
@@ -6,45 +6,86 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cuberto</title>
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="titulo">
-            <p>Mobile development</p>
-            <h1>Grow your business with mobile apps</h1>
+            <div class="texto-1">
+                <p>Mobile development</p>
+                <h1>Grow your business with mobile apps</h1>
+            </div>
         </div>
         <div class="row">
             <div class="column-2 estilos">
+                <div class="texto-1">
                 <h5>Sleepiest</h5>
-                <h3>Helps millions fall asleep everi night</h3>
+                <h3>Helps millions fall asleep every night</h3>
                 <p>branding, desing, mobile, product</p>
+                </div>
             </div>
             <div class="column-2 estilos"><img src="./img/section-1-m.png"></div>
         </div>
         <div class="row">
             <div class="column-2 estilos"><img src="./img/section-2-m.png"></div>
             <div class="column-2 estilos">
+                <div class="texto-1">
                 <h5>uLesson</h5>
                 <h3>Online platform for distance learning</h3>
                 <p>web, mobile, product</p>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="column-2 estilos">
+                <div class="texto-1">
                 <h5>Genesis Vision</h5>
                 <h3>Private trust management and trading platform</h3>
                 <p></p>
+                </div>
             </div>
             <div class="column-2 estilos"><img src="./img/section-3-m.png"></div>
         </div>
-        <div class="row">
-
+        <div class="">
+            <div class="texto-1">
+                <h4>Have an idea?</h4>
+            </div>
         </div>
         <div class="row">
             <div class=""></div>
-            <div class="column-4 estilos">3</div>
-            <div class="column-4 estilos">4</div>
-            <div class="column-4 estilos">5</div>
-            <div class="column-4 estilos">6</div>
+            <div class="column-4 estilos">
+                <div class="texto-1">
+                    <p>Product</p>
+                    <p>Features</p>
+                    <p>Security</p>
+                    <p>Enterprise</p>
+                </div>
+            </div>
+            <div class="column-4 estilos">
+                <div class="texto-1">
+                    <p>Platform</p>
+                    <p>Features</p>
+                    <p>Security</p>
+                    <p>Enterprise</p>
+                </div>
+            </div>
+            <div class="column-4 estilos">
+                <div class="texto-1">
+                    <p>Product</p>
+                    <p>Features</p>
+                    <p>Security</p>
+                    <p>Enterprise</p>
+                </div>
+            </div>
+            <div class="column-4 estilos">
+                <div class="texto-1">
+                    <p>Product</p>
+                    <p>Features</p>
+                    <p>Security</p>
+                    <p>Enterprise</p>
+                </div>
+            </div>
         </div>
     </body>
     </html>
