--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cuberto</title>
-        <link rel="stylesheet" type="text/css" href="css/estilos.css">
+        <link rel="stylesheet" type="text/css" href="./css/estilos.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -13,23 +13,29 @@
     <body>
         <div class="titulo">
             <div class="texto-1">
-                <p>Mobile development</p>
+                <p><strong>Mobile development</strong></p>
                 <h1>Grow your business with mobile apps</h1>
             </div>
         </div>
         <div class="row">
-            <div class="column-2 estilos">
-                <div class="texto-1">
-                <h5>Sleepiest</h5>
-                <h3>Helps millions fall asleep every night</h3>
-                <p>branding, desing, mobile, product</p>
+            <div class="column-2 estilos izq">
+                <div class="izq">
+                    <div class="texto-1">
+                        <h5>Sleepiest</h5>
+                        <h3>Helps millions fall asleep every night</h3>
+                        <p>branding, desing, mobile, product</p>
+                    </div>
                 </div>
             </div>
-            <div class="column-2 estilos"><img src="./img/section-1-m.png"></div>
+            <div class="column-2 estilos der">
+                <div class="der">
+                    <img src="./img/section-1-m.png">
+                </div>
+            </div>
         </div>
         <div class="row">
-            <div class="column-2 estilos"><img src="./img/section-2-m.png"></div>
-            <div class="column-2 estilos">
+            <div class="column-2 estilos izq"><img src="./img/section-2-m.png"></div>
+            <div class="column-2 estilos der">
                 <div class="texto-1">
                 <h5>uLesson</h5>
                 <h3>Online platform for distance learning</h3>
@@ -38,52 +44,56 @@
             </div>
         </div>
         <div class="row">
-            <div class="column-2 estilos">
+            <div class="column-2 estilos izq">
                 <div class="texto-1">
                 <h5>Genesis Vision</h5>
                 <h3>Private trust management and trading platform</h3>
-                <p></p>
+                <p>branding, desing, experience, product</p>
                 </div>
             </div>
-            <div class="column-2 estilos"><img src="./img/section-3-m.png"></div>
+            <div class="column-2 estilos der"><img src="./img/section-3-m.png"></div>
         </div>
-        <div class="">
+        <div class="final-1">
             <div class="texto-1">
-                <h4>Have an idea?</h4>
+                <h4>Have an idea? Tell us about it</h4>
             </div>
         </div>
         <div class="row">
             <div class=""></div>
             <div class="column-4 estilos">
                 <div class="texto-1">
-                    <p>Product</p>
+                    <h2>Product</h2>
                     <p>Features</p>
                     <p>Security</p>
                     <p>Enterprise</p>
+                    <p>Customer stories</p>
                 </div>
             </div>
             <div class="column-4 estilos">
                 <div class="texto-1">
-                    <p>Platform</p>
+                    <h2>Platform</h2>
                     <p>Features</p>
                     <p>Security</p>
                     <p>Enterprise</p>
+                    <p>Electron</p>
                 </div>
             </div>
             <div class="column-4 estilos">
                 <div class="texto-1">
-                    <p>Product</p>
-                    <p>Features</p>
-                    <p>Security</p>
-                    <p>Enterprise</p>
+                    <h2>Support</h2>
+                    <p>Help</p>
+                    <p>Community Forum</p>
+                    <p>Learning Lab</p>
+                    <p>Certifications</p>
                 </div>
             </div>
             <div class="column-4 estilos">
                 <div class="texto-1">
-                    <p>Product</p>
-                    <p>Features</p>
-                    <p>Security</p>
-                    <p>Enterprise</p>
+                    <h2>Company</h2>
+                    <p>About</p>
+                    <p>Blog</p>
+                    <p>Careers</p>
+                    <p>Press</p>
                 </div>
             </div>
         </div>
